# homed-angel

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  caller.md  homed-angel.example.json
.github/workflows/: build.yml
angelscript/sdk/tests/test_feature/source/: stdvector.h
cmake/: FindAngelScript.cmake  FindNova.cmake
deploy/: homed-angel.service
deploy/debian/: post_install.sh
scripts/: astro.as  buttons.as  chaos.as  datetime.as  devices_list.as  first.as  gsm.as  init.as  ota.as  strings.as  timers.as
scripts/1/: second.as
scripts/classes/: daytime.as
scripts/includes/: include.as  log_helpers.as
scripts/subfolder/: json.as  many-to-one.as  mqtt.as
src/: log.h  main.cpp  main.h  st.h
src/configuration/: ccmdoptions.cpp  ccmdoptions.h  cconfiguration.cpp  cconfiguration.h  cconfigurationoption.cpp  cconfigurationoption.h
src/datetime/astronomical/: castronomical.cpp  castronomical.h  csuntracker.cpp  csuntracker.h  ctracker.cpp  ctracker.h
src/datetime/entities/: cdatetime.cpp  cdatetime.h  ctimeinterval.cpp  ctimeinterval.h
src/datetime/timers/: ctimer.cpp  ctimer.h  ctimercontinuos.cpp  ctimercontinuos.h  ctimercron.cpp  ctimercron.h  ctimeroneshoot.cpp  ctimeroneshoot.h
src/defines/: class_helpers.h
src/homed/: chomed.cpp  chomed.h
src/homed/base/: cbase.cpp  cbase.h  ccontainer.cpp  ccontainer.h
src/homed/model/containers/: cdevices.cpp  cdevices.h  cendpoints.cpp  cendpoints.h  cinstances.cpp  cinstances.h  cproperties.cpp  cproperties.h
src/homed/model/entities/: cdevice.cpp  cdevice.h  cendpoint.cpp  cendpoint.h  cinstance.cpp  cinstance.h  cproperty.cpp  cproperty.h
src/homed/value/: ccolor.cpp  ccolor.h  cobserver.cpp  cobserver.h  cstorage.cpp  cstorage.h  cvalue.cpp  cvalue.h
src/mqtt/: cdevicename.cpp  cdevicename.h  cmqtt.cpp  cmqtt.h  cmqttcallback.cpp  cmqttcallback.h  cmqttclient.cpp  cmqttclient.h  cpayload.cpp  ctopic.cpp
src/mqtt/base/: cmqttbase.cpp  cmqttbase.h  cmqttcallback.cpp  cmqttcallback.h  cmqttclient.cpp  cmqttclient.h  cmqttpublisher.cpp  cmqttpublisher.h
src/mqtt/homed/: cdevicename.cpp  cmqtthomedcallback.cpp  cmqtthomedcallback.h  cmqtthomedclient.cpp  cmqtthomedclient.h  cpayload.cpp  cpayload.h  ctopic.cpp  ctopic.h
src/mqtt/scripting/: cmqttscriptcallback.cpp  cmqttscriptcallback.h  cmqttscriptclient.cpp  cmqttscriptclient.h
src/scripting/: cangel.cpp  cangel.h  cengine.cpp  cengine.h  cscript.cpp  cscript.h
src/scripting/fs/: cfilewatcher.cpp  cfilewatcher.h
src/scripting/helpers/: cconverter.cpp  cconverter.h  cjson.cpp  cjson.h  clogger.cpp  clogger.h  cstrings.cpp  cstrings.h
src/scripting/script/: cscript.cpp  cscript.h  cscriptenvironment.cpp  cscriptenvironment.h  cscriptenvironmenthelpers.cpp  cscriptobject.cpp  cscriptobject.h  cscriptsmanager.cpp  cscriptsmanager.h
src/scripting/script/callers/: ccaller.cpp  ccaller.h  ccallerdouble.cpp  ccallerdouble.h  ccallersingle.cpp  ccallersingle.h
src/serial/: cserial.cpp  cserial.h  cserialcommunication.cpp  cserialcommunication.h  cserialwatcher.cpp  cserialwatcher.h
src/serial/devices/: cserialdevices.cpp  cserialdevices.h
src/serial/devices/gsm/: cgsm.cpp  cgsm.h
src/tools/iconv/: ciconv.cpp  ciconv.h
src/tools/singletone/: csingletone.cpp  csingletone.h  singletone.h
src/utils/: datetime.cpp  datetime.h  fs.cpp  fs.h  numeric.cpp  numeric.h  random.cpp  random.h  string.cpp  string.h  thread.cpp  thread.h
